src/test/ui/issues/issue-20005.stderr
error[E0277]: the size for values of type `Self` cannot be known at compilation time
  --> $DIR/issue-20005.rs:8:5
   |
LL | /     fn to<Dst>(
LL | |         self
LL | |     ) -> <Dst as From<Self>>::Result where Dst: From<Self> {
LL | |         From::from(self)
LL | |     }
   | |_____^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `Self`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = help: consider adding a `where Self: std::marker::Sized` bound
note: required by `From`
  --> $DIR/issue-20005.rs:1:1
   |
LL | trait From<Src> {
   | ^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
